--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
 	<div class="row home-product text-center pb-5">
 		<div class="col-md-5 col-12">
 			<div class='photo-stack' id="photo-stack">
-			  <img src='http://placekitten.com/300/200' class="stack-pics" id="stack-pics" onload="dyheight();">
-			  <img src='http://placekitten.com/300/200?image=2' class="stack-pics" id="stack-pics">
-			  <img src='http://placekitten.com/300/200?image=3' class="stack-pics">
-			  <img src='http://placekitten.com/300/200?image=4' class="stack-pics">
-			  <img src='http://placekitten.com/300/200?image=5' class="stack-pics">
+			  <img src='images/4882.jpg' class="stack-pics" id="stack-pics" onload="dyheight();">
+			  <img src='images/569.jpg' class="stack-pics" id="stack-pics">
+			  <img src='images/20.jpg' class="stack-pics">
+			  <img src='images/21122.jpg' class="stack-pics">
+			  <img src='images/424.jpg' class="stack-pics">
 			</div>
 		</div>
 		<div class="col-md-7 col-12">
