--- a/about.html
+++ b/about.html
@@ -65,6 +65,8 @@
 			if(document.getElementById('check').checked)
 			{
 				document.getElementById('nav').style.background = '#fff';
+				document.getElementById('logo-dark').style.opacity = '1';
+				document.getElementById('logo-light').style.opacity = '0';
 				document.getElementById('bars').style.color = "#000";
 				setTimeout(function() {document.getElementById('notnav').classList.toggle('nodisplay');}, 500);
 				document.getElementById('bars').style.transform = 'rotate(-90deg)';
@@ -99,6 +101,8 @@
 			if(window.scrollY>2)
 			{
 				document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+				document.getElementById('logo-dark').style.opacity = '1';
+				document.getElementById('logo-light').style.opacity = '0';
 				document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
 				let items = document.getElementsByClassName('navbar-item');
 				let i=0;
@@ -116,6 +120,8 @@
 			else
 			{
 				document.getElementById('nav').style.background = 'transparent';
+				document.getElementById('logo-light').style.opacity = '1';
+				document.getElementById('logo-dark').style.opacity = '0';
 				document.getElementById('nav').style.borderBottom = 'none';
 				if(window.innerWidth>740)
 				{
@@ -169,6 +175,7 @@
 
 		function slidein()
 		{
+			document.getElementById('thank-pop').style.display = 'none';
 			document.getElementById('uni-contact-btn').style.transition = '0.5s';
 			document.getElementById('uni-contact-btn').style.bottom = '-100px';
 			var fs = $("#pop-subname").css("fontSize");
@@ -228,7 +235,8 @@
 			<label for="check">
 				<i class="fas fa-bars" id="bars"></i>
 			</label>
-			<a href="index.html"><img src="images/logo.png" alt="Prerana Enterprises"></a>
+			<a href="#"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises"></a>
+			<a href="#"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises"></a>
 			<ul>
 				<li><a class="navbar-item" href="index.html"><i class="fas fa-home"></i> Home</a></li>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-file-contract"></i> About Us</a></li>
@@ -335,7 +343,7 @@
 
 				<div class="col-lg-4 col-12 d-lg-block d-sm-none d-block pt-sm-0 py-2" id="footer-3">
 					<div class="w-75 mx-auto" id="footer-image-div">
-						<img src="images/logo.png" class="position-absolute" id="footer-image" alt="Prerana Enterprises" onload="dyheight();">
+						<img src="images/2.png" class="position-absolute" id="footer-image" alt="Prerana Enterprises" onload="dyheight();">
 					</div>
 				</div>
 
@@ -354,6 +362,8 @@
 	if(window.scrollY>2)
 	{
 		document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+		document.getElementById('logo-dark').style.opacity = '1';
+		document.getElementById('logo-light').style.opacity = '0';
 		document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
 		let items = document.getElementsByClassName('navbar-item');
 		let i=0;
