--- a/reviews.html
+++ b/reviews.html
@@ -235,13 +235,13 @@
 			<label for="check">
 				<i class="fas fa-bars" id="bars"></i>
 			</label>
-			<a href="#"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises"></a>
-			<a href="#"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises"></a>
+			<a href="https://preranaenterprises.in"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises"></a>
+			<a href="https://preranaenterprises.in"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises"></a>
 			<ul>
-				<li><a class="navbar-item" href="index.html"><i class="fas fa-home"></i> Home</a></li>
-				<li><a class="navbar-item" href="about.html"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a class="navbar-item" href="products.html"><i class="fas fa-box-open"></i> Our Products</a></li>
-				<li><a class="navbar-item" href="contact.html"><i class="fas fa-address-card"></i> Contact Us</a></li>
+				<li><a class="navbar-item" href="https://preranaenterprises.in"><i class="fas fa-home"></i> Home</a></li>
+				<li><a class="navbar-item" href="about"><i class="fas fa-file-contract"></i> About Us</a></li>
+				<li><a class="navbar-item" href="products"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a class="navbar-item" href="contact"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
 
