--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@
 			<a href="#"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises"></a>
 			<ul>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-home"></i> Home</a></li>
-				<li><a class="navbar-item" href="about.html"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a class="navbar-item" href="products.html"><i class="fas fa-box-open"></i> Our Products</a></li>
-				<li><a class="navbar-item" href="contact.html"><i class="fas fa-address-card"></i> Contact Us</a></li>
+				<li><a class="navbar-item" href="about"><i class="fas fa-file-contract"></i> About Us</a></li>
+				<li><a class="navbar-item" href="products"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a class="navbar-item" href="contact"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
 		<div class="container">
