--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 			</div>
 			
 		</div>
-		<div class="container text-lg-right pt-2 pb-sm-4 pb-3 pl-lg-0 pl-5"><div class="mr-lg-5 pr-lg-5"><a href="products.html" class="mr-lg-5 btn btn-danger review-btn">View Products</a></div></div>
+		<div class="container text-lg-right pt-2 pb-sm-4 pb-3 pl-lg-0 pl-5"><div class="mr-lg-5 pr-lg-5"><a href="products" class="mr-lg-5 btn btn-danger review-btn">View Products</a></div></div>
 
 	</div>
 
@@ -394,7 +394,7 @@
 		<div class="col-md-7 col-12">
 			<div class="home-profile-info text-justify mr-md-4 ml-md-0 mx-3 pt-md-0 pt-2">
 				<p class="boom-opacity">Prerana Enterprises is an extremely innovative company that is always open to fresh ideas. We are always looking at new ways to improve our operations and the process.</p><p class="mb-2 boom-opacity">We understand the challenges faced by our clients and assist them in developing the ideas that would work efficiently for their unique needs and would fit in with their budget.</p>
-				<div class="mr-sm-5 text-right mt-0"><a href="about.html" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
+				<div class="mr-sm-5 text-right mt-0"><a href="about" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
 			</div>
 		</div>
 	</div>
@@ -484,7 +484,7 @@
 		</div>
 
 
-		<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="reviews.html" class="btn btn-primary review-btn">Read Reviews</a></div>
+		<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="reviews" class="btn btn-primary review-btn">Read Reviews</a></div>
 
 	</div>
 </div>
