--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
 
 <div class="aboutus-bg">
-	<h2 class="text-center subname pt-3 pb-md-5 pb-4 boom-opacity proud-client">More About Us</h2>
+	<h2 class="text-center subname pt-3 pb-md-5 pb-4 proud-client">More About Us</h2>
 
 	<div class="row home-product text-center pb-5">
 		<div class="col-md-5 col-12">
@@ -466,7 +466,7 @@
 
 
 <div class="proudy">
-	<h2 class="text-center subname pt-4 pb-4 proud-client">Our Proud Clients</h2>
+	<h2 class="text-center subname pt-4 pb-4 proud-client boom-opacity">Our Proud Clients</h2>
 
 	<div class="pb-4 pt-2">
 
@@ -484,7 +484,7 @@
 		</div>
 
 
-		<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="reviews" class="btn btn-primary review-btn">Read Reviews</a></div>
+		<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy boom-opacity">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="reviews" class="btn btn-primary review-btn">Read Reviews</a></div>
 
 	</div>
 </div>
@@ -592,7 +592,7 @@
 <script type="text/javascript">
 
 
-	setTimeout(function() {if(screen.height<830 && window.scrollY<50){window.scroll(0,60)}}, 3500);
+	setTimeout(function() {if(screen.height<830 && window.scrollY<50){window.scroll(0,60);}}, 3500);
 
 	if(window.scrollY>50)
 	{
