--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 		</div>
 		<div class="col-md-7 col-12">
 			<div class="home-profile-info text-justify mr-md-4 ml-md-0 mx-3 pt-md-0 pt-2">
-				<p class="boom-opacity">Prerana Enterprises is an extremely innovative company that is always open to fresh ideas. We are always looking at new ways to improve our operations and the process.</p><p class="mb-2 boom-opacity">We understand the challenges faced by our clients and assist them in developing the ideas that would work efficiently for their unique needs and would fit in with their budget.</p>
+				<p class="boom-opacity">Here at Prerana Enterprises, we're all about <i>cardboard</i>. And for us, it's never <i>just a box</i>. Each box we manufacture is of outstanding quality and eco-friendly!</p><p class="mb-2 boom-opacity">If you are looking for custom-printed packaging boxes or plain corrugated boxes, this is the precise place. We manufacture content-protecting, brand-enhancing, sustainable packaging boxes that will help your products to stand-out and get noticed thus increasing your sale. Our boxes offer sustainability and reliability helping you sell more and worry less.</p>
 				<div class="mr-sm-5 text-right mt-0"><a href="about" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
 			</div>
 		</div>
@@ -700,6 +700,7 @@
 		}, 1100);
 
 		contact_vis();
+		boom();
 	}
 
 	setInterval(function() {
