--- a/index.html
+++ b/index.html
@@ -473,12 +473,12 @@
 		<div class="client-strip py-4">
 		
 			<div class="img-strip" id="img-strip">
+				<div class="image-move"><img src="images/logofull.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/3.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/2.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 				<div class="image-move"><img src="images/longlogo.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/recycle.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 			</div>
 		</div>
