--- a/test.html
+++ b/test.html
@@ -321,11 +321,18 @@
 			</ul>
 		</nav>
 		<div class="container">
-			<h1 class="banner-title pt-5 text-white text-lg-center">
-				Corrugated Boxes Tailored to your Needs!
-			</h1>
-			<div class="mx-auto width-changer banner-caption pb-0">
-				<p class="mb-lg-0"><i class="fas fa-boxes"></i> We manufacture all types of corrugated boxes.</p><p class="mb-0">Get products that are environment friendly!<ul class="banner-caption"><li><i class="fas fa-recycle"></i> Recyclable</li><li><i class="fab fa-envira"></i> Sustainable</li><li><i class="fas fa-users-cog"></i> Customisable</li></ul></p>
+				<h1 class="banner-title pt-5 text-white">
+					Corrugated Boxes Tailored to your Needs!
+				</h1>
+			<div class="width-changer banner-caption pb-0">
+				<div class="row">
+					<i class="fas fa-boxes col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">We manufacture all types of corrugated boxes.</p>
+					<div class="col-1 mx-0 px-0"></div>
+					<p class="mb-1 col-11 mx-0 px-0">Get products that are environment friendly!</p>
+					<i class="fas fa-recycle col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">Recyclable</p>
+					<i class="fab fa-envira col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">Sustainable</p>
+					<i class="fas fa-users-cog col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">Customisable</p>
+				</div>
 			</div>
 			
 		</div>
