--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 				Corrugated Boxes Tailored to your Needs!
 			</h1>
 			<div class="mx-auto width-changer banner-caption pb-0">
-				<p class="mb-lg-0"><i class="fas fa-boxes"></i> We manufacture all types of corrugated boxes.</p><p class="mb-0">Get products that are environment friendly!<ul class="banner-caption"><li><i class="fas fa-recycle"></i> Recyclable</li><li><i class="fab fa-envira"></i> Sustainable</li><li><i class="fas fa-users-cog"></i> Customisable</li></ul></p>
+				<p class="mb-0"><i class="fas fa-boxes"></i> We manufacture all types of corrugated boxes.</p><p class="mb-lg-0"><i class="fab fa-envira"></i> Get products that are environment friendly!<ul class="banner-caption list-unstyled"><li><i class="fas fa-recycle"></i> Recyclable</li><li><i class="fas fa-dumbbell"></i> Sustainable</li><li><i class="fas fa-users-cog"></i> Customisable</li></ul></p>
 			</div>
 			
 		</div>
