--- a/test.html
+++ b/test.html
@@ -90,7 +90,7 @@
 				{
 					document.getElementsByClassName('banner')[0].style.minHeight = '0px';
 				}
-				if(window.innerWidth>740)
+				if(window.innerWidth>870)
 				{
 					let items = document.getElementsByClassName('navbar-item');
 					let i=0;
@@ -327,23 +327,18 @@
 				<li><a class="navbar-item" href="contact"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
-		<div class="container">
-				<h1 class="banner-title pt-5 text-white">
-					Corrugated Boxes Tailored to your Needs!
-				</h1>
+		<div class="banner-content">
+			<h1 class="banner-title pt-5 text-white">
+				Corrugated Boxes Tailored to your Needs!
+			</h1>
 			<div class="width-changer banner-caption pb-0">
-				<div class="row">
-					<i class="fas fa-boxes col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">We manufacture all types of corrugated boxes.</p>
-					<div class="col-1 mx-0 px-0"></div>
-					<p class="mb-1 col-11 mx-0 px-0">Get products that are environment friendly!</p>
-					<i class="fas fa-recycle col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">Recyclable</p>
-					<i class="fab fa-envira col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">Sustainable</p>
-					<i class="fas fa-users-cog col-1 mx-0 px-0"></i><p class="mx-0 px-0 col-11" style="vertical-align: top; line-height: 27px;">Customisable</p>
-				</div>
+				<p class="mb-0"><i class="fas fa-boxes"></i> We manufacture all types of corrugated boxes.</p><p class="mb-lg-0"><i class="fab fa-envira"></i> Get products that are environment friendly!<ul class="banner-caption list-unstyled"><li><i class="fas fa-recycle"></i> Recyclable</li><li><i class="fas fa-dumbbell"></i> Sustainable</li><li><i class="fas fa-users-cog"></i> Customisable</li></ul></p>
 			</div>
 			
+
+			<div class="pt-2 pb-sm-4 pb-3"><div class="mr-lg-5 pr-lg-5"><a href="products" class="mr-lg-5 btn btn-danger banner-btn">View Products</a></div></div>
+
 		</div>
-		<div class="container text-lg-right pt-2 pb-sm-4 pb-3 pl-lg-0 pl-5"><div class="mr-lg-5 pr-lg-5"><a href="products" class="mr-lg-5 btn btn-danger review-btn">View Products</a></div></div>
 
 	</div>
 
@@ -604,7 +599,7 @@
 		$("nav a img").css("height","50px");
 		$("nav a img").css("top","5px");
 	}
-	else if(window.innerWidth<740)
+	else if(window.innerWidth<870)
 	{
 		if(screen.height<830)
 		{
@@ -635,7 +630,7 @@
 	}
 	
 	$("nav ul li").hover(function() {
-		if(window.innerWidth>740 && window.scrollY<50)
+		if(window.innerWidth>870 && window.scrollY<50)
 		{
 			$("nav ul li a").css("color","#fff");
 		}
@@ -649,7 +644,7 @@
 	}
 
 	document.getElementById('active').onclick = function() {
-		if(window.innerWidth<=740)
+		if(window.innerWidth<=870)
 		{
 			document.getElementById('check').checked=false;
 			black();
@@ -676,7 +671,7 @@
 
 		if(document.getElementById('check').checked)
 		{
-			if(window.innerWidth<=740)
+			if(window.innerWidth<=870)
 			{
 				document.getElementById('notnav').classList.remove('nodisplay');
 			}
